# Gg

./: .gitignore  AGENTS.md  AppController.h  Build.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Gg.cpp  Gg.h  Gg.sln  Gg.ui  Gg.vcxproj  Gg.vcxproj.filters  LambdaThread.h  MetricsEngine.cpp  MetricsEngine.h  README.md  SparklineWidget.cpp  TrajectoryWidget.h  WinDeviceInfo.cpp  WorkspaceRepository.cpp  WorkspaceRepository.h  api-key.md  main.cpp  需求.md
.claude/: AGENTS_architecture.md  AGENTS_cmake.md  CMake最佳C++工程实践规约.md  代码生成规范.md
cmake/: config.cmake
docs/: Build.md  c++代码组织与架构设计.md  开发者技术文档.md  技术方案.md  项目结构.md
docs/产品/: done.md  to do.md
docs/技术/: 架构设计.md  项目代码介绍.md
include/Gg/: AppTypes.h  Gg.h  SparklineWidget.h  WinDeviceInfo.h
lib/common/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/data/: CMakeLists.txt
lib/device/: CMakeLists.txt
lib/types/: CMakeLists.txt
lib/ui/: CMakeLists.txt
script/: build.bat
src/: AppController.cpp  Gg.qrc  main.cpp
src/core/: CMakeLists.txt  MetricsEngine.cpp  MetricsEngine.h
src/core/common/: LambdaThread.cpp  LambdaThread.h
src/core/data/: SessionSampleWriter.cpp  SessionSampleWriter.h  WorkspaceRepository.cpp  WorkspaceRepository.h
src/core/device/: WinDeviceInfo.cpp  WinDeviceInfo.h
src/core/input/: WinRawInputMouseSource.cpp  WinRawInputMouseSource.h
src/core/types/: AppTypes.h
src/ui/: CMakeLists.txt  SparklineWidget.cpp  SparklineWidget.h  TrajectoryWidget.cpp  TrajectoryWidget.h
src/ui/app/: AppController.cpp  AppController.h  Gg.cpp  Gg.h  Gg.qrc  Gg.ui  gg.qss  main.cpp
src/ui/app/i18n/: Gg_zh_CN.ts
